--- a/frontend/job-freelance-ui/src/index.html
+++ b/frontend/job-freelance-ui/src/index.html
@@ -5,9 +5,11 @@
   <title>JobFreelanceUi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="ftco-32x32.png">
 </head>
 <body>
+<div class="site-wrap">
   <app-root></app-root>
+</div>
 </body>
 </html>
